src/test/ui/structs/struct-base-wrong-type.stderr
error[E0308]: mismatched types
  --> $DIR/struct-base-wrong-type.rs:10:33
   |
LL | static foo: Foo = Foo { a: 2, ..bar }; //~  ERROR mismatched types
   |                                 ^^^ expected struct `Foo`, found struct `Bar`
   |
   = note: expected type `Foo`
              found type `Bar`

error[E0308]: mismatched types
  --> $DIR/struct-base-wrong-type.rs:14:35
   |
LL | static foo_i: Foo = Foo { a: 2, ..4 }; //~  ERROR mismatched types
   |                                   ^ expected struct `Foo`, found integer
   |
   = note: expected type `Foo`
              found type `{integer}`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
